# helm

./: .gitignore  Cargo.toml  README.md
packaging/arch/: PKGBUILD
packaging/linux/: cipher-vault.desktop  helm.desktop
scripts/: package.sh
src/: crypto.rs  main.rs  store.rs
wix/: main.wxs
