[package]
name = "helm"
version = "0.1.0"
edition = "2024"
description = "A local password vault whose master password is never stored"
license = "MIT"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20 = "0.9"
eframe = { version = "0.35", default-features = false, features = ["accesskit", "glow", "wayland", "x11"] }
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true

[package.metadata.deb]
section = "utils"
priority = "optional"
assets = [
    ["target/release/helm", "usr/bin/", "755"],
    ["packaging/linux/helm.desktop", "usr/share/applications/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/helm", dest = "/usr/bin/helm", mode = "755" },
    { source = "packaging/linux/helm.desktop", dest = "/usr/share/applications/helm.desktop", mode = "644" },
]
